topology/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: BRANCH_NAME-srv
  namespace: BRANCH_NAME
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - BRANCH_NAME.${REGISTRY_HOST}
    secretName: BRANCH_NAME
  rules:
  - host: BRANCH_NAME.${REGISTRY_HOST}
    http:
      paths:
      - path: /
        backend:
          serviceName: hwservice1
          servicePort: 8089
